--- a/common/html/home.html
+++ b/common/html/home.html
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="col-2">
             <h1 class="color-primary">
-              The home title
+              {$PAGE_HEADING$}
             </h1>
             
             <p>
