--- a/common/html/home.html
+++ b/common/html/home.html
@@ -8,9 +8,9 @@
     
     <title>Index</title>
     
-    <link rel="stylesheet" href="common/css/global.css" type="text/css" />
+    <link rel="stylesheet" href="{$MEDIA$}/css/global.css" type="text/css" />
   </head>
-  <body>    
+  <body id="home">    
     <header class="bg-primary">
       <div class="container">
         <div class="row">
