--- a/common/html/home.html
+++ b/common/html/home.html
@@ -16,7 +16,7 @@
         <div class="row">
           <div class="col-1">
             <div class="header logo">
-              <a href="index.php" title="Home"><img src="{$MEDIA$}/img/logo.png" alt="Logo" /></a>
+              <a href="{$SITE_ROOT$}" title="Home"><img src="{$MEDIA$}/img/logo.png" alt="Logo" /></a>
               
               <button id="navbar-toggle" data-toggle="active" data-target="#navbar" type="button" class="toggle-btn bg-secondary visible-xs">
                 <span>+</span>
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="col-2">
             <h1 class="color-primary">
-              {$PAGE_HEADING$}
+              {$HOME_TITLE$}
             </h1>
             
             <p>
